[package]
name = "zkevm-assembly"
version = "1.3.0"
authors = ["hedgar2017 <hedgar2017@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
description = "The zkEVM common utilities"

[[bin]]
name = "reader"
path = "src/reader/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.9"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"
regex = "1.4"
nom = "7"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"
zkevm_opcode_defs = { git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", rev = "9307543b9ca51bd80d4f5c85d6eb80efd8b19bb2" }
# zkevm_opcode_defs = {path = "../zkevm_opcode_defs"}
smallvec = "*"
